and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

Changes are grouped as follows
- `Added` for new features.
- `Changed` for changes in existing functionality.
- `Deprecated` for soon-to-be removed features.
- `Removed` for now removed features.
- `Fixed` for any bug fixes.
- `Security` in case of vulnerabilities.

# [2.3.4] - 2023-05-09
### Fixed
- source-destination prject override by client config project. The issue is fixed in python SDK -> class Transformation

# [2.3.3] - 2023-03-17
### Fixed
- Match on type instead of isinstance for `Nodes` and `Edges`.

# [2.3.2] - 2023-03-16
### Changed
- Split `Instances` destination type to `Nodes` and `Edges`.

# [2.3.1] - 2023-03-14
### Fixed
- Use old sdk version 5.5.* to continue support instances.

# [2.3.0] - 2023-02-10
### Added
- Support `Instances` destination type.

## [2.2.2] - 2022-10-26
### Added
- `DestinationConfigType` for `raw` to accept `database` and `table` fields in addition to `rawDatabase` and `rawTable`.

## [2.2.1] - 2022-10-07
### Fixed
- Upgrade cognite-sdk after `TransformationSchedule.dump()` fix.

## [2.2.0] - 2022-09-29
### Added
- Support tags on transformations.

## [2.1.4] - 2022-09-16
### Fixed
- Upgrade cognite-sdk to fix the nonce updates for manifest authentication.

## [2.1.3] - 2022-08-22
### Fixed
- Fix unexpected breaking change when authenticating with API keys. Cognite SDK 4.1.1 also removed project inference from the API keys so `cdf-project-name` became a required option.
  Tranformations CLI now infers it using Login API to keep backward compatibility.

## [2.1.2] - 2022-08-18
### Fixed
- Update to cognite-sdk v4.1.1, removes the support for reserved environment variables such as `COGNITE_API_KEY` and `COGNITE_CLIENT_ID`.

## [2.1.1] - 2022-08-09
### Fixed
- Fix issue on reading transformations with job details.

## [2.1.0] - 2022-06-21
### Added
- support for loading `.env` file for local testing (not CI/CD)